Revert "Add shifting imgs" Fix This reverts commit a849e8874cdc0358c368637c9991daa2f113a99d.

--- a/src/scss/gd.scss
+++ b/src/scss/gd.scss
@@ -9,32 +9,29 @@ section#photo-grid {
     grid-template-rows: 30vh 30vh;
     gap: 2vw;
     background-size: cover;
-    .img1 {
+    #img1 {
       grid-column: 1 / span 3;
       grid-row: 1 / span 1;
     }
-    .img2 {
+    #img2 {
       grid-column: 1 / span 2;
       grid-row: 2 / span 1;
     }
-    .img3 {
+    #img3 {
       grid-column: 3 / span 1;
       grid-row: 2 / span 1;
     }
-    .img4 {
+    #img4 {
       grid-column: 4 / span 1;
       grid-row: 1 / span 2;
     }
-    .img5 {
+    #img5 {
       grid-column: 5 / span 2;
       grid-row: 1 / span 1;
     }
-    .img6 {
+    #img6 {
       grid-column: 5 / span 2;
       grid-row: 2 / span 1;
-    }
-    .gd-img-sec {
-      opacity: 0;
     }
     img {
       border-radius: 20px / 20px;
@@ -43,7 +40,6 @@ section#photo-grid {
       width: 100%;
       height: 100%;
       transition: 300ms transform;
-      transition: 300ms opacity;
     }
     img:hover {
       transform: scale(1.05);
@@ -63,27 +59,27 @@ section#photo-grid {
     height: 90vh;
     grid-template-rows: 30vh 30vh 30vh;
     grid-template-columns: 1fr 1fr 1fr;
-    .img1 {
+    #img1 {
       grid-column: 1 / span 2;
       grid-row: 1 / span 1;
     }
-    .img2 {
+    #img2 {
       grid-column: 1 / span 1;
       grid-row: 2 / span 1;
     }
-    .img3 {
+    #img3 {
       grid-column: 2 / span 1;
       grid-row: 2 / span 1;
     }
-    .img4 {
+    #img4 {
       grid-column: 3 / span 1;
       grid-row: 1 / span 2;
     }
-    .img5 {
+    #img5 {
       grid-column: 1 / span 2;
       grid-row: 3 / span 1;
     }
-    .img6 {
+    #img6 {
       grid-column: 3 / span 2;
       grid-row: 3 / span 1;
     }
@@ -95,27 +91,27 @@ section#photo-grid {
     grid-template-rows: 30vh 20vh 20vh 30vh;
     grid-template-columns: 1fr 1fr;
     height: 100vh;
-    .img1 {
+    #img1 {
       grid-column: 1 / span 2;
       grid-row: 1 / span 1;
     }
-    .img2 {
+    #img2 {
       grid-column: 1 / span 1;
       grid-row: 2 / span 1;
     }
-    .img3 {
+    #img3 {
       grid-column: 1 / span 1;
       grid-row: 3 / span 1;
     }
-    .img4 {
+    #img4 {
       grid-column: 2 / span 1;
       grid-row: 2 / span 2;
     }
-    .img5 {
+    #img5 {
       grid-column: 1 / span 1;
       grid-row: 4 / span 1;
     }
-    .img6 {
+    #img6 {
       grid-column: 2 / span 1;
       grid-row: 4 / span 1;
     }
